--- a/html/FirstPage.html
+++ b/html/FirstPage.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>
+            My First Web Page
+        </title>
+    </head>
     <body>
         This is my first page.
     </body>
