Finished up headers and paragraphs

--- a/html/FirstPage.html
+++ b/html/FirstPage.html
@@ -5,7 +5,25 @@
             My First Web Page
         </title>
     </head>
+
     <body>
-        This is my first page.
+        <h1>
+            Always start with h1 for headers and go in order.
+        </h1>
+
+        <h2>
+            Header 2.
+        </h2>
+        <p>
+            This is how paragraphs are created. <br> And how a line break tag is used.
+        </p>
+
+        <h3>
+            Headers go up to h6.
+        </h3>
+        <p>
+            <em> Write in Italics. </em>
+            <strong> Write in Bold. </strong>
+        </p>
     </body>
 </html>
