Added List Things

--- a/html/FirstPage.html
+++ b/html/FirstPage.html
@@ -25,5 +25,39 @@
             <em> Write in Italics. </em>
             <strong> Write in Bold. </strong>
         </p>
+
+        <h4>
+            Unordered Lists:
+        </h4>
+        <ul>
+            <li> This is how to setup </li>
+            <li> An Unordered List </li>
+        </ul>
+
+        <h4>
+            Ordered Lists:
+        </h4>
+        <ol>
+            <li> This is how to setup </li>
+            <li> An Ordered List </li>
+        </ol>
+
+        <h5>
+            Nested Lists:
+        </h5>
+        <ol>
+            <li> Ordered List </li>
+            <li>
+                With an
+                <ul>
+                    <li> Unordered List </li>
+                    <li> On the Inside </li>
+                    <ol>
+                        <li> Another nest for fun </li>
+                    </ol>
+                </ul>
+            </li>
+            <li> So much nesting </li>
+        </ol>
     </body>
 </html>
