--- a/html/FirstPage.html
+++ b/html/FirstPage.html
@@ -11,7 +11,7 @@
             Always start with h1 for headers and go in order.
         </h1>
 
-        <h2>
+        <h2 id="Header 2">
             Header 2.
         </h2>
         <p>
@@ -59,5 +59,19 @@
             </li>
             <li> So much nesting </li>
         </ol>
+
+        <h2>
+            Links:
+        </h2>
+        <ul>
+            <li> <a href="http://www.espn.com">
+                ESPN
+            </a> </li>
+            <li> Can also send a user to another part of the same page. </li>
+            <li> Set an id attribute to any tag. </li>
+            <li> <a href="#Header 2">
+                Go to Header 2.
+            </a></li>
+        </ul>
     </body>
 </html>
