Added an image and how to set up a table

--- a/html/FirstPage.html
+++ b/html/FirstPage.html
@@ -73,5 +73,43 @@
                 Go to Header 2.
             </a></li>
         </ul>
+
+        <h2>
+            Images:
+        </h2>
+        <p>
+            <img src="/Web-Development/html/fouronetwo.jpg" width="150" height="150" alt="Shop 412">
+        </p>
+
+        <h2>
+            Tables:
+        </h2>
+        <table>
+            <tr>
+                <td> Row 1, cell 1 </td>
+                <td> Row 1, cell 2 </td>
+                <td> Row 1, cell 3 </td>
+            </tr>
+            <tr>
+                <td> Row 2, cell 1 </td>
+                <td> Row 2, cell 2 </td>
+                <td> Row 2, cell 3 </td>
+            </tr>
+            <tr>
+                <td> Row 3, cell 1 </td>
+                <td> Row 3, cell 2 </td>
+                <td> Row 3, cell 3 </td>
+            </tr>
+            <tr>
+                <td> Row 4, cell 1 </td>
+                <td> Row 4, cell 2 </td>
+                <td> Row 4, cell 3 </td>
+            </tr>
+        </table>
+
+        <h2> 
+            Forms:
+        </h2>
+        
     </body>
 </html>
