Added different ways to modify text

--- a/css/WebPage.html
+++ b/css/WebPage.html
@@ -10,14 +10,14 @@
         <h1> CSS Web Page </h1>
 
         <h2> Purpose: </h2>
-        <p> 
+        <p id="p1"> 
             CSS specifies the style and presentation of a HTML document. Such as:
-            <ul>
+            <ul id="ul1">
                 <li> Page Layouts </li>
                 <li> Colors </li>
                 <li> Fonts </li>
             </ul>
-            Everything here is to be changed by the CSS file.
+            <span class="s1"> Everything here is to be changed by the CSS file. </span>
         </p>
 
         <h2>
