Added borders, margins, and padding

--- a/css/WebPage.html
+++ b/css/WebPage.html
@@ -20,7 +20,7 @@
             <span class="s1"> Everything here is to be changed by the CSS file. </span>
         </p>
 
-        <h2>
+        <h2 id="listHeader">
             Lists:
         </h2>
         <ol>
@@ -41,7 +41,7 @@
         </p>
 
         <h2> Tables: </h2>
-        <table>
+        <table id="table1">
             <tr>
                 <td> Row 1, cell 1 </td>
                 <td> Row 1, cell 2 </td>
