Learned about how to use pseudo classes

--- a/css/intermediateWebPage.html
+++ b/css/intermediateWebPage.html
@@ -25,5 +25,25 @@
             <dd>Grouping allows for you to combine multiple selectors under one group and give each selector the attributes within it.</dd>
             <dd><p>Nesting allows you to specify properties to selectors within other selectors.</p></dd>
         </dl>
+
+        <h2>Pseudo Classes</h2>
+        <dl id="pseudo">
+            <dd>Purpose: to specify a state or relation to the selector it is attached to.</dd>
+            <dd>Most basic use is on a link to say if it was visited yet or not.</dd>
+            <dd><a href="http://htmldog.com">HTML Dog</a></dd>
+            <dd><h3>Dynamic Pseudo Class</h3></dd>
+            <dd>Can be used to apply styles when something happens to something. Also commonly used for links.</dd>
+            <dd>Three main classes:</dd>
+            <ol>
+                <li>active - used when something is activated by the user, such as a link being clicked on</li>
+                <li>hover - used when something is passed over by an input from the user, such as a cursor moving over a link</li>
+                <li>focus - used when something gains focus, when it is ready for or selected by for keyboard input</li>
+                <ul>
+                    <li>Most often used for form elements.</li>
+                </ul>
+            </ol>
+            <dd>Another class is the <mark>first-child</mark> class. Its purpose is to target something only if it is the very first descendant of an element.</dd>
+            <dd>There are also last-child, target, and first-of-type classes to name a few more.</dd>
+        </dl>
     </body>
 </html>
