Learned shorthand notation for some CSS properties

--- a/css/intermediateWebPage.html
+++ b/css/intermediateWebPage.html
@@ -45,5 +45,21 @@
             <dd>Another class is the <mark>first-child</mark> class. Its purpose is to target something only if it is the very first descendant of an element.</dd>
             <dd>There are also last-child, target, and first-of-type classes to name a few more.</dd>
         </dl>
+
+        <h2>Shorthand Properties</h2>
+        <dl id="shorthand">
+            <dd><p>Some CSS properties allow for a string of values to make it quicker to write.</p></dd>
+            <dd><h3>Margins and Padding</h3></dd>
+            <dd><p>
+                Margins and padding can be written in the form of <mark>property: top right bottom left</mark> instead of writing each individually.<br>
+                Same goes for padding as they can be written as property: (top and bottom) (right and left).
+            </p></dd>
+            <dd><h3>Borders and Fonts</h3></dd>
+            <dd><p id="borderfont">
+                The same can be done with borders and fonts. Just write it as one line instead of multiple like shown in the CSS file.<br>
+                Border style, width, and color can be written as one by doing <mark>border: width color style</mark>.
+                While font style, weight, size, line height, and family can be rewritten as <mark>font: style weight size line-height family</mark>.
+            </p></dd>
+        </dl>
     </body>
 </html>
