Finished background shorthand property

--- a/css/intermediateWebPage.html
+++ b/css/intermediateWebPage.html
@@ -61,5 +61,24 @@
                 While font style, weight, size, line height, and family can be rewritten as <mark>font: style weight size line-height family</mark>.
             </p></dd>
         </dl>
+
+        <h2>Background Images</h2>
+        <dl id="background">
+            <dd>background: is an additional shorthand property.</dd>
+            <dd>It contains the properties of <mark>background: color image repeat position</mark>:</dd>
+            <ul>
+                <li>background-color: color of the background</li>
+                <li>background-image: location of the image</li>
+                <li>background-repeat: Can be one of 4 things.</li>
+                <ol>
+                    <li>repeat - tile effect across whole background</li>
+                    <li>repeat-y - repeating on the y-axis, top and bottom</li>
+                    <li>repeat-x - repeating on the x-axis, left and right</li>
+                    <li>no-repeat - shows image just once</li>
+                </ol>
+                <li>background-position: can be top, center,bottom,left,right, a length, a percentage, or any sensible combination such as top right</li>
+            </ul>
+            <dd>There are also other features that it can hold such as attachment, clip, origin, and size. See the property reference on google to see all of them.</dd>
+        </dl>
     </body>
 </html>
