--- a/css/intermediateWebPage.html
+++ b/css/intermediateWebPage.html
@@ -80,5 +80,10 @@
             </ul>
             <dd>There are also other features that it can hold such as attachment, clip, origin, and size. See the property reference on google to see all of them.</dd>
         </dl>
+
+        <h2>Specificity</h2>
+        <dl id="specificity">
+            <dd></dd>
+        </dl>
     </body>
 </html>
