Finished the intermediate CSS tutorial

--- a/css/intermediateWebPage.html
+++ b/css/intermediateWebPage.html
@@ -153,8 +153,27 @@
                 <li id="relative">Relative - like static but the box xan be offset with the top,right,bottom,left properties.</li>
                 <li id="absolute">Absolute - allows for the box to be moved anywhere on the page using top,right,bottom,left properties.</li>
                 <li id="fixed">Fixed - behaves like absolute, but will stay in that position when the page is scrolled down.</li>
-
             </ul>
+            <h3>Layout Without Positioning</h3>
+            <div id="column1">
+                <ul>
+                    <li>row 1</li>
+                    <li>row 2</li>
+                    <li>row 3</li>
+                </ul>
+            </div>
+            <div id="column2">
+                <ul>
+                    <li>row 1</li>
+                    <li>row 2</li>
+                    <li>row 3</li>
+                </ul>
+            </div>
+            <h3>Floating</h3>
+                <p>Allows for you to move a bunch to the middle of some content and have that content around it.</p>
+                <p id="float">This is a floating box.</p>
+                <p>Use the clear property to clear to either the left, right, or both sides of the floating box.</p>
+                <p>The clear property is very good for making footers. Especially when used under positioned boxes.</p>
         </dl>
     </body>
 </html>
