Learned and wrote CSS code for corners and shadows

--- a/css/Advanced Webpage.html
+++ b/css/Advanced Webpage.html
@@ -10,5 +10,30 @@
         <h1>CSS Advanced Web Page</h1>
 
         <h2>Rounded Corners</h2>
+            <p>Use the border-radius property to add corners to each corner of the box. Or you can use border to set a border.</p>
+            <p id="corner1">Round all corners of the box.</p>
+            <p id="corner2">Round all corners of the box with a border.</p>
+            <p id="corner3">You can add multiple values and change each corner specifically.</p>
+            <p id="corner4">You can also do it using shorthand properties.</p>
+            <p id="ellipses">You can specifiy different horizontal and vertical radii like this.</p>
+            <p id="egg">You can make an egg like this.</p>
+
+        <h2>Shadows</h2>
+            <p>You can apply shadows to both text and boxes to make them stand out more on the web page.</p>
+            <p id="boxshadow">box-shadow is the property that will add a shadow.</p>
+            <p id="insetshadow">You can also add an inner shadow by adding inset into the property.</p>
+            <p>There are 5 values in it (the last 3 are optional):</p>
+            <ol>
+                <li>horizontal offset - how far the shadow is nudged to the right (or left if it is negative)</li>
+                <li>vertical offset - how far the shadow is nudged downwards (or upwards if it is negative)</li>
+                <li>blue radius - the higher the value the less sharp the shadow</li>
+                <li>spread distance - the higher the value the larger the shadow</li>
+                <li>color - color of the shadow</li>
+            </ol>
+            <p>Applying a <em id="textshadow">text shadow</em> is the same as with boxes. Just use the text-shadow property instead.</p>
+            <p>Text-shadow has the same properties as box-shadow does (horizontal offset, vertical offset, blue radius, and color). However, there is no spread distance or inset options.</p>
+    
+        <h2>Universal, Child, and Adjacent Selectors</h2>
+            <p></p>
     </body>
 </html>
